# SecPaper

./: .gitignore  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  STRUCTURE.md  papers.example.json
src/: lib.rs
src/embedding/: fastembed.rs  mod.rs  openai.rs
src/ingestion/: mod.rs
src/models/: mod.rs
src/provider/: json.rs  mod.rs
src/query/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs  sqlite.rs
