[package]
name = "mcp-paper-search"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for semantic paper search using abstract embeddings"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# HTTP client for OpenAI API
reqwest = { version = "0.13.2", features = ["json"] }

# Embedding libraries
fastembed = { version = "5.9.0", features = ["ort-download-binaries"] }

# MCP protocol
# Note: Add actual MCP SDK dependency when available

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.8"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "ingestion"
path = "src/bin/ingestion.rs"

[lib]
name = "mcp_paper_search"
path = "src/lib.rs"
